fix: fix blue link text on ios

--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -1,4 +1,6 @@
 .button {
+  color: inherit;
+
   background: none;
   padding: 0;
   border: none;
